force-app/main/default/objects/NoteDeFrais__c/NoteDeFrais__c.object-meta.xml
<CustomObject>
    <label>Note de frais</label>
    <nameField>
        <displayFormat>N-{00000}</displayFormat>
        <label>N° Note de frais</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes de frais</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>