force-app/main/default/objects/NoteDeFrais__c/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notes de frais</relationshipLabel>
    <relationshipName>Notes_de_frais</relationshipName>
    <type>Lookup</type>
</CustomField>