force-app/main/default/objects/NoteDeFrais__c/fields/FSL_NContratdAssistanceTechnique__c.field-meta.xml
<CustomField>
    <fullName>FSL_NContratdAssistanceTechnique__c</fullName>
    <description>Renseigne automatiquement le numéro de contrat d&apos;assistance technique associé à l&apos;intervention</description>
    <formula>NDF_Intervention__r.ServiceContractId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Renseigne automatiquement le numéro de contrat d&apos;assistance technique associé à l&apos;intervention</inlineHelpText>
    <label>N° Contrat d&apos;assistance technique</label>
    <type>Text</type>
</CustomField>