force-app/main/default/objects/NoteDeFrais__c/fields/FSL_NumeroMatricule__c.field-meta.xml
<CustomField>
    <fullName>FSL_NumeroMatricule__c</fullName>
    <label>N° matricule</label>
    <length>16</length>
    <type>Text</type>
</CustomField>