force-app/main/default/objects/NoteDeFrais__c/fields/NDF_AchatsDivers__c.field-meta.xml
<CustomField>
    <fullName>NDF_AchatsDivers__c</fullName>
    <label>Achats Divers</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>