force-app/main/default/objects/NoteDeFrais__c/fields/NDF_Astreinte__c.field-meta.xml
<CustomField>
    <fullName>NDF_Astreinte__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cocher la case si le rendez-vous de service est effectué sous astreinte</description>
    <inlineHelpText>Cocher la case si le rendez-vous de service est effectué sous astreinte</inlineHelpText>
    <label>Astreinte</label>
    <type>Checkbox</type>
</CustomField>