force-app/main/default/objects/NoteDeFrais__c/fields/NDF_CodePostalDuRDV__c.field-meta.xml
<CustomField>
    <fullName>NDF_CodePostalDuRDV__c</fullName>
    <formula>NDF_Intervention__r.PostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code postal du RDV</label>
    <type>Text</type>
</CustomField>