force-app/main/default/objects/NoteDeFrais__c/fields/NDF_Commentaire__c.field-meta.xml
<CustomField>
    <fullName>NDF_Commentaire__c</fullName>
    <label>Commentaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>