force-app/main/default/objects/NoteDeFrais__c/fields/NDF_CompteClient__c.field-meta.xml
<CustomField>
    <fullName>NDF_CompteClient__c</fullName>
    <formula>Compte__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compte client</label>
    <type>Text</type>
</CustomField>