force-app/main/default/objects/NoteDeFrais__c/fields/NDF_CRMId__c.field-meta.xml
<CustomField>
    <fullName>NDF_CRMId__c</fullName>
    <formula>Compte__r.ACC_CRMId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM Id</label>
    <type>Text</type>
</CustomField>