force-app/main/default/objects/NoteDeFrais__c/fields/NDF_DateDuJour__c.field-meta.xml
<CustomField>
    <fullName>NDF_DateDuJour__c</fullName>
    <label>Date du jour</label>
    <type>Date</type>
</CustomField>