force-app/main/default/objects/NoteDeFrais__c/fields/NDF_DateDuRendezVous__c.field-meta.xml
<CustomField>
    <fullName>NDF_DateDuRendezVous__c</fullName>
    <formula>NDF_NumRDVService__r.ActualStartTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date du rendez-vous</label>
    <type>Date</type>
</CustomField>