force-app/main/default/objects/NoteDeFrais__c/fields/NDF_FeuilleDeTemps__c.field-meta.xml
<CustomField>
    <fullName>NDF_FeuilleDeTemps__c</fullName>
    <label>Feuille de temps</label>
    <referenceTo>TimeSheet</referenceTo>
    <relationshipLabel>Notes de frais</relationshipLabel>
    <relationshipName>Notes_de_frais</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>