force-app/main/default/objects/NoteDeFrais__c/fields/NDF_ForfaitDejeunerPR1__c.field-meta.xml
<CustomField>
    <fullName>NDF_ForfaitDejeunerPR1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forfait Déjeuner PR1</label>
    <type>Checkbox</type>
</CustomField>