force-app/main/default/objects/NoteDeFrais__c/fields/NDF_ForfaitDinerPR1__c.field-meta.xml
<CustomField>
    <fullName>NDF_ForfaitDinerPR1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forfait Diner PR1</label>
    <type>Checkbox</type>
</CustomField>