force-app/main/default/objects/NoteDeFrais__c/fields/NDF_ForfaitEntretienBleu__c.field-meta.xml
<CustomField>
    <fullName>NDF_ForfaitEntretienBleu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forfait entretien bleu</label>
    <type>Checkbox</type>
</CustomField>