force-app/main/default/objects/NoteDeFrais__c/fields/NDF_ForfaitTimbresPostaux__c.field-meta.xml
<CustomField>
    <fullName>NDF_ForfaitTimbresPostaux__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forfait timbres postaux</label>
    <type>Checkbox</type>
</CustomField>