force-app/main/default/objects/NoteDeFrais__c/fields/NDF_HotelInvitationsRestaurant__c.field-meta.xml
<CustomField>
    <fullName>NDF_HotelInvitationsRestaurant__c</fullName>
    <label>Hotel / Invitation(s) restaurant</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>