force-app/main/default/objects/NoteDeFrais__c/fields/NDF_Intervention__c.field-meta.xml
<CustomField>
    <fullName>NDF_Intervention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intervention</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Notes de frais</relationshipLabel>
    <relationshipName>Notes_de_frais</relationshipName>
    <type>Lookup</type>
</CustomField>