force-app/main/default/objects/NoteDeFrais__c/fields/NDF_MontantDesFraisReels__c.field-meta.xml
<CustomField>
    <fullName>NDF_MontantDesFraisReels__c</fullName>
    <label>Montant des frais réels</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>