force-app/main/default/objects/NoteDeFrais__c/fields/NDF_NCommande__c.field-meta.xml
<CustomField>
    <fullName>NDF_NCommande__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>N° Commande</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Notes de frais</relationshipLabel>
    <relationshipName>Notes_de_frais</relationshipName>
    <type>Lookup</type>
</CustomField>