force-app/main/default/objects/NoteDeFrais__c/fields/NDF_NIntervention__c.field-meta.xml
<CustomField>
    <fullName>NDF_NIntervention__c</fullName>
    <description>Affiche automatiquement le numéro de l&apos;intervention associée</description>
    <formula>NDF_NumRDVService__r.Intervention__r.WorkOrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Affiche automatiquement le numéro de l&apos;intervention associée</inlineHelpText>
    <label>N° Intervention</label>
    <type>Text</type>
</CustomField>