force-app/main/default/objects/NoteDeFrais__c/fields/NDF_NumCAT__c.field-meta.xml
<CustomField>
    <fullName>NDF_NumCAT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>N° CAT</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Notes de frais</relationshipLabel>
    <relationshipName>Notes_de_frais</relationshipName>
    <type>Lookup</type>
</CustomField>