force-app/main/default/objects/NoteDeFrais__c/fields/NDF_NumRDVService__c.field-meta.xml
<CustomField>
    <fullName>NDF_NumRDVService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>N° Rendez vous de service</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Notes de frais</relationshipLabel>
    <relationshipName>Notes_de_frais</relationshipName>
    <type>Lookup</type>
</CustomField>