force-app/main/default/objects/NoteDeFrais__c/fields/NDF_Pays__c.field-meta.xml
<CustomField>
    <fullName>NDF_Pays__c</fullName>
    <formula>NDF_Intervention__r.Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pays</label>
    <type>Text</type>
</CustomField>