force-app/main/default/objects/NoteDeFrais__c/fields/NDF_Statut__c.field-meta.xml
<CustomField>
    <fullName>NDF_Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nouveau</fullName>
                <default>true</default>
                <label>Nouveau</label>
            </value>
            <value>
                <fullName>Soumis</fullName>
            </value>
            <value>
                <fullName>Validation back office</fullName>
            </value>
            <value>
                <fullName>Validation responsable agence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>