force-app/main/default/objects/NoteDeFrais__c/fields/NDF_Tech_CompteurDiner__c.field-meta.xml
<CustomField>
    <fullName>NDF_Tech_CompteurDiner__c</fullName>
    <formula>IF(NDF_ForfaitDinerPR1__c , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_CompteurDiner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>