force-app/main/default/objects/NoteDeFrais__c/fields/NDF_Tech_NoteDeFraisDuJour__c.field-meta.xml
<CustomField>
    <fullName>NDF_Tech_NoteDeFraisDuJour__c</fullName>
    <formula>NOW()= CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_NoteDeFraisDuJour</label>
    <type>Checkbox</type>
</CustomField>