force-app/main/default/objects/NoteDeFrais__c/fields/NDF_Technicien__c.field-meta.xml
<CustomField>
    <fullName>NDF_Technicien__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technicien</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Notes_de_frais</relationshipName>
    <type>Lookup</type>
</CustomField>