force-app/main/default/objects/NoteDeFrais__c/fields/NDF_TerritoireDeServiceDuRDV__c.field-meta.xml
<CustomField>
    <fullName>NDF_TerritoireDeServiceDuRDV__c</fullName>
    <description>Automatiquement renseigné par le nom du Territoire de service affecté au rendez-vous de service</description>
    <formula>NDF_NumRDVService__r.ServiceTerritory.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatiquement renseigné par le nom du Territoire de service affecté au rendez-vous de service</inlineHelpText>
    <label>Territoire de service du RDV</label>
    <type>Text</type>
</CustomField>