force-app/main/default/objects/NoteDeFrais__c/fields/NDF_TotalDesFraisReels1__c.field-meta.xml
<CustomField>
    <fullName>NDF_TotalDesFraisReels1__c</fullName>
    <description>Calcul automatique du total des frais réels</description>
    <formula>( NDF_HotelInvitationsRestaurant__c + NDF_Transport__c + NDF_AchatsDivers__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calcul automatique du total des frais réels</inlineHelpText>
    <label>Total des frais réels (1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>