force-app/main/default/objects/NoteDeFrais__c/fields/NDF_Transport__c.field-meta.xml
<CustomField>
    <fullName>NDF_Transport__c</fullName>
    <label>Transport ( Carburant, péage, parking)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>