force-app/main/default/objects/NoteDeFrais__c/fields/NDF_TypeDeFraisReels__c.field-meta.xml
<CustomField>
    <fullName>NDF_TypeDeFraisReels__c</fullName>
    <label>Type de frais réels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Péage</fullName>
            </value>
            <value>
                <fullName>Essence</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Restauration</fullName>
            </value>
            <value>
                <fullName>Hôtel</fullName>
            </value>
            <value>
                <fullName>Divers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>