force-app/main/default/objects/NoteDeFrais__c/fields/NDF_VilleDuRDV__c.field-meta.xml
<CustomField>
    <fullName>NDF_VilleDuRDV__c</fullName>
    <formula>NDF_Intervention__r.City</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ville du RDV</label>
    <type>Text</type>
</CustomField>