force-app/main/default/objects/NoteDeFrais__c/fields/NumeroMatricule__c.field-meta.xml
<CustomField>
    <fullName>NumeroMatricule__c</fullName>
    <description>Numéro de matricule de l&apos;utilisateur renseigné automatiquement lors de la sauvegarde de l&apos;enregistrement</description>
    <formula>$User.NMatricule__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Numéro de matricule de l&apos;utilisateur renseigné automatiquement lors de la sauvegarde de l&apos;enregistrement</inlineHelpText>
    <label>Numero matricule</label>
    <type>Text</type>
</CustomField>