force-app/main/default/objects/NoteDeFrais__c/fields/Tech_CompteurForfaitBleu__c.field-meta.xml
<CustomField>
    <fullName>Tech_CompteurForfaitBleu__c</fullName>
    <formula>IF(NDF_ForfaitEntretienBleu__c , 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_CompteurForfaitBleu</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>