force-app/main/default/objects/NoteDeFrais__c/fields/Tech_CompteurForfaitTimbres__c.field-meta.xml
<CustomField>
    <fullName>Tech_CompteurForfaitTimbres__c</fullName>
    <formula>IF(NDF_ForfaitTimbresPostaux__c , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_CompteurForfaitTimbres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>