force-app/main/default/objects/NoteDeFrais__c/recordTypes/Frais_reels.recordType-meta.xml
<RecordType>
    <fullName>Frais_reels</fullName>
    <active>true</active>
    <label>Frais réels</label>
</RecordType>