force-app/main/default/objects/NoteDeFrais__c/recordTypes/RT_NDF_Forfait_hebdomadaire.recordType-meta.xml
<RecordType>
    <fullName>RT_NDF_Forfait_hebdomadaire</fullName>
    <active>true</active>
    <label>Forfait hebdomadaire</label>
</RecordType>