force-app/main/default/objects/NoteDeFrais__c/recordTypes/RT_NDF_Forfait_journalier.recordType-meta.xml
<RecordType>
    <fullName>RT_NDF_Forfait_journalier</fullName>
    <active>true</active>
    <label>Forfait journalier</label>
</RecordType>