force-app/main/default/objects/NoteDeFrais__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NDF_FeuilleDeTemps__c</columns>
    <columns>NDF_Statut__c</columns>
    <columns>NDF_NumRDVService__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>NDF_TypeDeFraisReels__c</columns>
    <columns>NDF_MontantDesFraisReels__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les notes de frais</label>
</ListView>